# Vertex-Cover

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  bipartite.cpp  bipartite.h  cmake_install.cmake  graph.cpp  graph.h  main.cpp  pace  thingstodo
include/: adjlist.h  clawfreeGraph.h  edge.h  graph.h  maximumMatching.h  maxmatching.h
src/: adjlist.cpp  bipartite.cpp  clawfreeGraph.cpp  edge.cpp  graph.cpp  maxmatching.cpp
